appId: com.avaliacao2.app

---
- openLink: exp://172.20.24.168:8081
- tapOn:
    id: input-username
- inputText: "fulano"
- tapOn:
    id: input-password
- inputText: "123"
- tapOn:
    id: login-button
- assertVisible: "Vôos"
