appId: com.avaliacao2.app

---
- openLink: exp://172.20.24.168:8081
- tapOn:
    id: input-username
- inputText: "fulan"
- tapOn:
    id: input-password
- inputText: "bla"
- tapOn:
    id: login-button
- assertVisible: "Invalid Login."